<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="app_name">Klaxon</string>
	<string name="clock_name">Bed Clock</string>
	<string name="no_alarm_set">No Alarm Set</string>
	<string-array name="days_of_week">
		<item>Monday</item>
		<item>Tuesday</item>
		<item>Wednesday</item>
		<item>Thursday</item>
		<item>Friday</item>
		<item>Saturday</item>
		<item>Sunday</item>
	</string-array>
	<string-array name="snooze_times">
		<item>No Snooze</item>
		<item>5 Minutes</item>
		<item>10 Minutes</item>
		<item>15 Minutes</item>
		<item>20 Minutes</item>
		<item>25 Minutes</item>
	</string-array>
	<string-array name="alarm_volumes">
		<item>50%</item>
		<item>60%</item>
		<item>70%</item>
		<item>80%</item>
		<item>90%</item>
		<item>100%</item>
	</string-array>
	<string-array name="volume_ramps">
		<item>Immediately</item>
		<item>10 seconds</item>
		<item>20 seconds</item>
		<item>30 seconds</item>
		<item>40 seconds</item>
		<item>50 seconds</item>
		<item>60 seconds</item>
		<item>70 seconds</item>
		<item>80 seconds</item>
		<item>90 seconds</item>
	</string-array>
	
	
    <!-- Repeat options that appear under an alarm on main Alarm Clock
         screen to identify repetition schedule: concatenate days with
         this character, i.e. "Mon, Tue, Wed" -->
    <string name="day_concat">", "</string>
	
    <!-- Repeat options that appear under an alarm on main Alarm Clock
         screen to identify repetition schedule: special case for when
         the alarm is set to repeat every day -->
    <string name="every_day">every day</string>

    <!-- Repeat options that appear under an alarm on main Alarm Clock
         screen to identify repetition schedule: special case for when
         the alarm is set to never repeat -->
    <string name="never">Never</string>

	<!-- Accessibility labels for Clock activity buttons --><skip/>
    <string name="alarm_button_description">Alarms</string>
    <string name="gallery_button_description">Gallery</string>
    <string name="music_button_description">Music</string>
    <string name="nightmode_button_description">Dim</string>
    <string name="home_button_description">Launcher</string>
    <string name="desk_clock_button_description">Clock Display</string>
    
    <!-- A short representation of charging information, e.g "34%" -->
    <string name="battery_charging_level"><xliff:g id="number">%d</xliff:g><xliff:g id="percent">%%</xliff:g></string>

    <!-- What to show the user if the weather widget exists but fails to
         respond. This is a sign of an error; if the weather widget is not
         present on the device, we show nothing at all. -->
    <string name="weather_fetch_failure">Weather information currently unavailable.</string>
    
    <!-- Title for AlarmClock activity -->
    <string name="alarm_list_title">Alarms</string>

    <!-- Menu item on Alarm Clock screen: Add alarm -->
    <string name="add_alarm">Add alarm</string>

    <!-- Menu item on Alarm Clock screen: Desk clock -->
    <string name="menu_desk_clock">Desk clock</string>

    <!-- Menu item on Alarm Clock screen: Edit alarm -->
    <string name="menu_edit_alarm">Edit alarm</string>

    <!-- Context Menu Item on Alarm Settings screen: Delete alarm -->
    <string name="delete_alarm">Delete alarm</string>
    
    <!-- Context Menu Item on Alarm Settings screen: Enable alarm -->
    <string name="enable_alarm">Turn alarm on</string>

    <!-- Context Menu Item on Alarm Settings screen: Disable alarm -->
    <string name="disable_alarm">Turn alarm off</string>
    
    <!-- Delete alarm confirmation dialog message. -->
    <string name="delete_alarm_confirm">This alarm will be deleted.</string>
    
    <!-- Menu item title for general Alarm Clock Settings -->
    <string name="settings">Settings</string>
    
    <string name="alarm_ticker">Alarm</string>
    
    <string name="fix_weather">Fix Weather</string>
    
    <string name="never_expire">This alarm will continue playing until you turn it off.</string>
    <string name="expires_after">After %d Minutes, this alarm will automatically shut off.</string>
    <string name="expire">Auto Shut Off</string>
	<string-array name="expire_times">
		<item>Never</item>
		<item>5 minutes</item>
		<item>10 minutes</item>
		<item>15 minutes</item>
		<item>20 minutes</item>
		<item>25 minutes</item>
		<item>30 minutes</item>
	</string-array>
	
	<string name="sleepmode">Sleep Mode</string>
	<string name="advanced">Advanced</string>
	<string name="flight_mode_off">Sleep Mode is Disabled.</string>
	<string-array name="sleep_mode_times">
		<item>Disable Flight Mode</item>
		<item>1 Hour</item>
		<item>2 Hour</item>
		<item>3 Hour</item>
		<item>4 Hour</item>
		<item>5 Hour</item>
		<item>6 Hour</item>
		<item>7 Hour</item>
		<item>8 Hour</item>
		<item>9 Hour</item>
		<item>10 Hour</item>
	</string-array>
	<string name="sleep_mode_summary">The phone will set itself to %1$s %2$d Hours before your alarm.</string>

	<string name="alarm_name">Alarm Name</string>
	<string name="ringtone">Ringtone</string>
	<string name="music">Music</string>
	<string name="am">AM</string>
	<string name="pm">PM</string>

	<string name="set_alarm">Set Alarm</string>
	<string name="name">Name</string>
	<string name="enabled">Enabled</string>
	<string name="time">Time</string>
	<string name="repeat">Repeat</string>
	<string name="snooze">Snooze</string>
	<string name="notification_settings">Notification Settings</string>
	<string name="volume">Volume</string>
	<string name="volumeramp">Volume Ramp Up Time</string>
	<string name="vibrate_enabled">Vibrate Enabled</string>
	<string name="percent">%d Percent</string>
	<string name="seconds">%d Seconds</string>
	<string name="minutes">%d Minutes</string>
	<string name="silent">Silent</string>
	<string name="vibrate">Vibrate</string>
	<string name="airplane_mode">Airplane Mode</string>
</resources>
