<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2008 The Android Open Source Project Licensed under the
		Apache License, Version 2.0 (the "License"); you may not use this file
		except in compliance with the License. You may obtain a copy of the
		License at http://www.apache.org/licenses/LICENSE-2.0 Unless required
		by applicable law or agreed to in writing, software distributed under
		the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
		CONDITIONS OF ANY KIND, either express or implied. See the License for
		the specific language governing permissions and limitations under the
		License.
	-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/set_alarm" />
	<Preference android:key="alarmname" android:title="@string/name" />
	<CheckBoxPreference android:key="enabled"
		android:title="@string/enabled" />
	<Preference android:key="time" android:title="@string/time" />
	<com.koushikdutta.klaxon.RepeatPreference
		android:key="repeat" android:title="@string/repeat" android:entries="@array/days_of_week"
		android:entryValues="@array/days_of_week" />
	<com.koushikdutta.klaxon.SnoozePreference
		android:key="snooze" android:title="@string/snooze" android:entries="@array/snooze_times" />

	<PreferenceCategory android:title="@string/notification_settings" />
	<com.koushikdutta.klaxon.VolumePreference
		android:key="volume" android:title="@string/volume" android:entries="@array/alarm_volumes" />
	<com.koushikdutta.klaxon.VolumeRampPreference
		android:key="volumeramp" android:title="@string/volumeramp"
		android:entries="@array/volume_ramps" />
	<Preference android:key="alarm" android:title="@string/ringtone" />
	<CheckBoxPreference android:key="VibrateEnabled"
		android:title="@string/vibrate_enabled" />
	<Preference android:key="expiretime" android:title="@string/expire" />
	<PreferenceCategory android:title="@string/advanced" />
	<Preference android:key="sleepmode" android:title="@string/sleepmode" />
</PreferenceScreen>
